--- a/index.html
+++ b/index.html
@@ -683,8 +683,8 @@
 
             <div class="tip-box">
                 <strong>💰 Informações importantes sobre pagamento:</strong><br>
-                • <strong>Vencimento:</strong> Normalmente em janeiro de cada ano<br>
-                • <strong>Parcelamento:</strong> Pode ser parcelado em até 3 vezes<br>
+                • <strong>Vencimento:</strong> A cada 12 meses da data de início do funcionamento<br>
+                • <strong>Parcelamento:</strong> Pode ser antecipadamente parcelado em até 3 vezes<br>
                 • <strong>Base legal:</strong> Lei Complementar nº 878/2021<br>
                 • <strong>Consultas:</strong> Portal da SEMFAZ ou atendimento presencial<br>
                 • <strong>Finalidade:</strong> Custear fiscalização e controle de atividades
