--- a/index.html
+++ b/index.html
@@ -718,7 +718,12 @@
                     <h4 style="color: #e53e3e; margin-bottom: 5px;">📈 Por que minha TFFR aumentou?</h4>
                     <p style="margin-left: 15px;">O valor pode aumentar se você ampliou o estabelecimento, mudou o horário de funcionamento ou se houve reajuste da UPF.</p>
                 </div>
-                
+
+                <div style="margin-bottom: 15px;">
+                    <h4 style="color: #e53e3e; margin-bottom: 5px;">⚠️ Minha empresa é dispensada de licenciamento por ser de baixo risco, tenho que pagar taxas?</h4>
+                    <p style="margin-left: 15px;">Sim e não. A dispensa de licenciamento (dispensa de alvará) somente resulta em inocorrência do fato gerador das taxas que dependem de ato concessivo. A TFFR não depende disso, portanto, deve ser paga todos os anos. Sua cobrança é pelo funcionamento e não pelo alvará.</p>
+                </div>                    
+                    
                 <div style="margin-bottom: 15px;">
                     <h4 style="color: #e53e3e; margin-bottom: 5px;">💳 Como pagar a TFFR?</h4>
                     <p style="margin-left: 15px;">Pode ser pago em cota única ou parcelado em até 3 vezes. Use o portal <a href="https://gpi-trb.portovelho.ro.gov.br/ServerExec/acessoBase/?idPortal=dbde30ec-cf59-4803-9653-00121a704021" target="_blank" style="color: #9f7aea;">SEMFAZ Online</a> para emitir o DAM.</p>
@@ -1418,3 +1423,4 @@
     </script>
 </body>
 </html>
+
