--- a/index.html
+++ b/index.html
@@ -721,7 +721,7 @@
 
                 <div style="margin-bottom: 15px;">
                     <h4 style="color: #e53e3e; margin-bottom: 5px;">⚠️ Minha empresa é dispensada de licenciamento por ser de baixo risco, tenho que pagar taxas?</h4>
-                    <p style="margin-left: 15px;">Sim e não. A dispensa de licenciamento (dispensa de alvará) somente resulta em inocorrência do fato gerador das taxas que dependem de ato concessivo. A TFFR não depende disso, portanto, deve ser paga todos os anos. Sua cobrança é pelo funcionamento e não pelo alvará.</p>
+                    <p style="margin-left: 15px;">Sim e não. A dispensa de licenciamento (dispensa de alvará) somente resulta em inocorrência do fato gerador (dispensa) das taxas que dependem de ato concessivo. A TFFR não depende disso, portanto, deve ser paga todos os anos. Sua cobrança é pelo funcionamento e não pelo alvará.</p>
                 </div>                    
                     
                 <div style="margin-bottom: 15px;">
@@ -1423,4 +1423,5 @@
     </script>
 </body>
 </html>
+
 
